package org.pispeb.treff_client.home;

import android.arch.lifecycle.ViewModel;

/**
 * Stores and manages the necessary data for the EventListFragment
 */

public class EventListViewModel extends ViewModel {
}
