package org.pispeb.treff_client.home;

import android.arch.lifecycle.ViewModel;

/**
 * Stores and manages the necessary data for the GroupListFragment
 */

public class GroupListViewModel extends ViewModel {

}
