@startuml

title Client

class AppCompatActivity
class Fragment

package ui_components <<Frame>> {
  AppCompatActivity <|-- NavigationActivity
  NavigationActivity <|-- TabbedNavigationActivity
}

package home <<Frame>> {
  TabbedNavigationActivity <|-- HomeActivity
  Fragment <|-- EventListFragment
  Fragment <|-- FriendListFragment
  Fragment <|-- GroupListFragment
  Fragment <|-- MapFragment
  Fragment <|-- NavigationDrawerFragment
  class ViewPagerAdapter
  class EventListViewModel
  class FriendListViewModel
  class GroupListViewModel
}


package group <<Frame>> {
  AppCompatActivity <|-- GroupActivity
  Fragment <|-- GroupSettingsFragment
}

package login <<Frame>> {
  AppCompatActivity <|-- LoginActivity
  Fragment <|-- RegisterFragment
}

package settings <<Frame>> {
  AppCompatActivity <|-- SettingsActivity
}

@enduml